Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44584

REG[4-5] OS X native menu items are disabled for modal dialog

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.10.1
    • 5.4.0
    • QPA
    • OS X 10.9.5
    • macOS
    • 11a2e0aa2dd921e16cbc80479dd3667dc62ff18a

    Description

      Setting menubar for modal or executed dialog makes menubar items disabled. If dialog is not modal or only show (not exec()) menu is available correctly.

      This is regression from Qt4. Testable with attached application on Q4 and Qt5.

      Attachments

        For Gerrit Dashboard: QTBUG-44584
        # Subject Branch Project Status CR V

        Activity

          People

            andysh Andy Shaw
            qtcomsupport Qt Support
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes